<resources>
    <string name="app_name">Traceable Goods</string>
    <string name="halo">Halo!</string>
    <string name="data_informasi">Data Informasi</string>
    <string name="info">Info</string>
    <string name="produk">Produk</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="master_data">Master Data</string>
    <string name="transaksi">Transaksi</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="filter_data">filter data</string>
    <string name="logout">Logout</string>
    <string name="masuk_aplikasi">Masuk Aplikasi</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="masuk_sebagai_admin">Masuk sebagai Admin</string>
    <string name="silahkan_masukan_email_dan_nkata_sandi_anda">Silahkan masukan email dan\nkata sandi Anda</string>
    <string name="list_title">Daftar %1$s</string>
    <string name="detail_title">Detail %1$s</string>
    <string name="cari_apa">Cari %1$s…</string>
    <string name="no_lot">No. Lot : %1$s</string>
    <string name="no_npwp">No. NPWP: %1$s</string>
    <string name="kontak">Kontak : %1$s</string>
    <string name="jenis_produk">Jenis Produk</string>
    <string name="id_produk">ID Produk : %1$d</string>
    <string name="id_produsen">ID Produsen : %1$d</string>
    <string name="id_distributor">ID Distributor : %1$d</string>
    <string name="id_penerima">ID Penerima : %1$d</string>
    <string name="id_penggiling">ID Penggiling : %1$d</string>
    <string name="id_pengepul">ID Pengepul : %1$d</string>
    <string name="id_gudang">ID Gudang : %1$d</string>
    <string name="id_tengkulak">ID Tengkulak : %1$d</string>
    <string name="id_pabrik_pengolahan">ID Pabrik : %1$d</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="merek">Merek</string>
    <string name="masukan_nama_produk">Masukan nama produk</string>
    <string name="masukan_merek_produk">Masukan merek produk</string>
    <string name="kode_produk_atau_no_lot">Kode Produk atau No. Lot</string>
    <string name="masukan_kode_produk_atau_no_lot">Masukan kode produk atau No. Lot</string>
    <string name="tanggal_produksi">Tanggal Produksi</string>
    <string name="masukan_tanggal_produksi">Masukan tanggal produksi</string>
    <string name="tanggal_kadaluarsa">Tanggal Kadaluarsa</string>
    <string name="masukan_tanggal_kadaluarsa">Masukan tanggal kadaluarsa</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="alamat_produsen">Alamat Produsen</string>
    <string name="masukan_deskripsi_produk">Masukan deskripsi produk</string>
    <string name="ubah">Ubah</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="hapus">Hapus</string>
    <string name="hapus_data">Hapus Data?</string>
    <string name="message_hapus_data">Apakah anda yakin untuk menghapus data ini?</string>
    <string name="gagal_simpan_data">Gagal menyimpan data</string>
    <string name="gagal_menambah_data">Gagal menambah data</string>
    <string name="tahap_sedang_dikerjakan">"Anda telah berada pada tahap %1$s"</string>
    <string name="gagal_hapus_data">Gagal menghapus data</string>
    <string name="berhasil_simpan_data">Data berhasil disimpan</string>
    <string name="berhasil_menambah_data">Berhasil Tambah Data %1$s</string>
    <string name="berhasil_hapus_data">Data berhasil dihapus</string>
    <string name="kategori_produsen">Kategori Produsen</string>
    <string name="nama_produsen">Nama Produsen</string>
    <string name="masukan_nama_produsen">Masukan nama produsen</string>
    <string name="masukan_alamat_produsen">Masukan alamat produsen</string>
    <string name="nama_distributor">Nama Distributor</string>
    <string name="masukan_nama_distributor">Masukan nama distributor</string>
    <string name="masukan_kontak_distributor">Masukan kontak distributor</string>
    <string name="alamat_distributor">Alamat Distributor</string>
    <string name="masukan_alamat_distributor">Masukan alamat distributor</string>
    <string name="masukan_nama_penerima">Masukan nama penerima</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="kategori_penerima">Kategori Penerima</string>
    <string name="alamat_penerima">Alamat Penerima</string>
    <string name="masukan_alamat_penerima">Masukan alamat penerima</string>
    <string name="masukan_kontak_penerima">Masukan kontak penerima</string>
    <string name="npwp_nomor_pokok_wajib_pajak">NPWP (Nomor Pokok Wajib Pajak)</string>
    <string name="masukan_npwp_produsen">Masukan NPWP produsen</string>
    <string name="kontak_whatsapp_telepon_email_dll">Kontak (WhatsApp, telepon, email, dll.)</string>
    <string name="masukan_kontak_produsen">Masukan kontak produsen</string>
    <string name="masukan_nama_penggiling">Masukan nama penggiling</string>
    <string name="masukan_kontak_penggiling">Masukan kontak penggiling</string>
    <string name="alamat_penggiling">Alamat Penggiling</string>
    <string name="masukan_alamat_penggiling">Masukan alamat penggiling</string>
    <string name="nama_penggiling">Nama Penggiling</string>
    <string name="masukan_kontak_pengepul">Masukan kontak pengepul</string>
    <string name="alamat_pengepul">Alamat Pengepul</string>
    <string name="masukan_alamat_pengepul">Masukan alamat pengepul</string>
    <string name="nama_pengepul">Nama Pengepul</string>
    <string name="masukan_nama_pengepul">Masukan nama pengepul</string>
    <string name="nama_gudang">Nama Gudang</string>
    <string name="masukan_nama_gudang">Masukan nama gudang</string>
    <string name="masukan_kontak_gudang">Masukan kontak gudang</string>
    <string name="alamat_gudang">Alamat Gudang</string>
    <string name="masukan_alamat_gudang">Masukan alamat gudang</string>
    <string name="nama_tengkulak">Nama Tengkulak</string>
    <string name="masukan_nama_tengkulak">Masukan nama tengkulak</string>
    <string name="masukan_kontak_tengkulak">Masukan kontak tengkulak</string>
    <string name="alamat_tengkulak">Alamat Tengkulak</string>
    <string name="masukan_alamat_tengkulak">Masukan alamat tengkulak</string>
    <string name="nama_pabrik_pengolahan">Nama Pabrik Pengolahan</string>
    <string name="masukan_nama_pabrik_pengolahan">Masukan nama pabrik pengolahan</string>
    <string name="masukan_kontak_pabrik_pengolahan">Masukan kontak pabrik pengolahan</string>
    <string name="alamat_pabrik_pengolahan">Alamat Pabrik Pengolahan</string>
    <string name="masukan_alamat_pabrik_pengolahan">Masukan alamat pabrik pengolahan</string>
    <string name="pilih_jenis_data">Pilih Jenis Data</string>
    <string name="lanjut">Lanjut</string>
    <string name="tambah_produk_title">Tambah Data Produk</string>
    <string name="merek_jika_ada">Merek (Jika ada)</string>
    <string name="kode_produk_atau_no_lot_jika_ada">Kode Produk atau No. Lot (Jika ada)</string>
    <string name="tanggal_produksi_jika_ada">Tanggal Produksi (Jika ada)</string>
    <string name="tanggal_kadaluarsa_jika_ada">Tanggal Kadaluarsa (Jika ada)</string>
    <string name="deskripsi_produk_jika_ada">Deskripsi Produk (Jika ada)</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_data_produsen">Tambah Data Produsen</string>
    <string name="tambah_data_distributor">Tambah Data Distributor</string>
    <string name="tambah_data_penerima">Tambah Data Penerima</string>
    <string name="tambah_data_penggiling">Tambah Data Penggiling</string>
    <string name="tambah_data_pengepul">Tambah Data Pengepul</string>
    <string name="tambah_data_gudang">Tambah Data Gudang</string>
    <string name="tambah_data_tengkulak">Tambah Data Tengkulak</string>
    <string name="tambah_data_npabrik_pengolahan">Tambah Data\nPabrik Pengolahan</string>
    <string name="tahap_produsen">Tahap Produsen</string>
    <string name="tidak_ada_produsen">Tidak ada produsen?</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="tidak_ada_produk">Tidak ada produk?</string>
    <string name="tidak_ada_distributor">Tidak ada distributor?</string>
    <string name="total_yang_didistribusikan">Total yang Didistribusikan</string>
    <string name="satuan">Satuan</string>
    <string name="lokasi_asal_pendistribusian">Lokasi Asal Pendistribusian</string>
    <string name="masukan_lokasi_asal_pendistribusian">Masukan lokasi asal pendistribusian</string>
    <string name="lokasi_tujuan_pendistribusian">Lokasi Tujuan Pendistribusian</string>
    <string name="masukan_lokasi_tujuan_pendistribusian">Masukan lokasi tujuan pendistribusian</string>
    <string name="pilih_tahap_selanjutnya">Pilih Tahap Selanjutnya</string>
    <string name="masukan_totalnya">Masukan totalnya</string>
    <string name="tahap_gudang">Tahap Gudang</string>
    <string name="total_yang_diterima">Total yang Diterima</string>
    <string name="nama_distributor_selanjutnya">Nama Distributor Selanjutnya</string>
    <string name="masukan_distributor_selanjutnya">Masukan distributor selanjutnya</string>
    <string name="tahap_tengkulak">Tahap Tengkulak</string>
    <string name="tidak_ada_tengkulak">Tidak ada tengkulak?</string>
    <string name="tidak_ada_gudang">Tidak ada gudang?</string>
    <string name="tahap_penggiling">Tahap Penggiling</string>
    <string name="tidak_ada_penggiling">Tidak ada penggiling?</string>
    <string name="tahap_pengepul">Tahap Pengepul</string>
    <string name="tidak_ada_pengepul">Tidak ada pengepul?</string>
    <string name="tidak_ada_pabrik_pengolahan">Tidak ada pabrik?</string>
    <string name="tahap_penerima">Tahap Penerima</string>
    <string name="tidak_ada_penerima">Tidak ada penerima?</string>
    <string name="selesai">Selesai</string>
    <string name="flash_on">Naikan volume untuk menyalakan flash</string>
    <string name="cetak">Cetak</string>
    <string name="alur_distribusi">Alur Distribusi</string>
    <string name="masuk_sebagai_pengamat">Masuk sebagai Pengamat</string>
    <string name="atau">Atau</string>
    <string name="traceable_goods">Traceable Goods</string>
    <string name="explain_app">Traceable Goods adalah aplikasi yang diperuntukan untuk menjaga transparansi dari distribusi bahan pangan yang ditujukan sebagai kontribusi untuk mendukung E-Government di Dinas Perdagangan.</string>
    <string name="explain_app_more">Aplikasi ini dibangun sebagai bagian dari penelitian yang dilakukan di perguruan tinggi Universitas Singaperbangsa Karawang untuk keperluan salah satu persyaratan kelulusan pada penulisan skripsi.\n\n\nTertanda</string>
    <string name="wahyu_rahayu">Wahyu Rahayu</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="info_content">Terdapat total %1$s Data Informasi yang telah ditambahkan</string>
    <string name="silahkan_tambahkan_data_terlebih_dahulu">Silahkan tambahkan data\nterlebih dahulu</string>
    <string name="tidak_boleh_kosong">Kolom ini wajib diisi!</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="detail_produsen">Detail Produsen</string>
    <string name="detail_distributor">Detail Distributor</string>
    <string name="detail_penerima">Detail Penerima</string>
    <string name="detail_penggiling">Detail Penggiling</string>
    <string name="detail_pengepul">Detail Pengepul</string>
    <string name="detail_gudang">Detail Gudang</string>
    <string name="detail_tengkulak">Detail Tengkulak</string>
    <string name="filter">Filter</string>
    <string name="filter_berdasarkan">Filter berdasarkan :</string>
    <string name="semua">Semua</string>
    <string name="sudah_selesai">Sudah Selesai</string>
    <string name="belum_selesai">Belum Selesai</string>
    <string name="tutup_dialog">Tutup dialog</string>
</resources>