<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/close_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_cross"
                android:contentDescription="@string/tutup_dialog" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/filter_berdasarkan"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <RadioButton
                android:id="@+id/rb_semua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/semua"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/rb_sudah_selesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/sudah_selesai"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_belum_selesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/belum_selesai"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:textSize="14sp" />

        </RadioGroup>

    </LinearLayout>

</androidx.cardview.widget.CardView>
