<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail.DetailProdukActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="50dp"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_back"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingStart="0dp"
                    android:paddingEnd="30dp"
                    android:text="@string/detail_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutDetailProduk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:paddingBottom="500dp"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutTitle">

            <LinearLayout
                android:id="@+id/layoutJenisProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/jenis_produk"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/id_produk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/id_produk"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <Spinner
                    android:id="@+id/timeShowSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_spinner"
                    android:entries="@array/jenis_produk_spinner"
                    android:paddingStart="5dp"
                    android:paddingEnd="23dp"
                    android:popupBackground="@color/white"
                    android:spinnerMode="dialog"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNamaProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/nama_produk"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_nama_produk"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_outline_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/masukan_nama_produk"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMerek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/merek"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_merek_produk"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_outline_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/masukan_merek_produk"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNoLot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/kode_produk_atau_no_lot"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_no_lot_produk"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_outline_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/masukan_kode_produk_atau_no_lot"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTanggalProduksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tanggal_produksi"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_tanggal_produksi_produk"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_outline_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/masukan_tanggal_produksi"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTanggalKadaluarsa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tanggal_kadaluarsa"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_tanggal_kadaluarsa_produk"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_outline_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/masukan_tanggal_kadaluarsa"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDeksripsiProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/deskripsi_produk"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_deskripsi_produk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_outline_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/masukan_deskripsi_produk"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:minLines="5"
                    android:paddingHorizontal="15dp"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_ubah"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/ubah"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingEnd="10dp"
                    android:paddingStart="30dp"
                    android:drawableEnd="@drawable/ic_ubah"
                    android:background="@drawable/bg_button_rounded"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_hapus"
                    style="@style/Button.OutlineButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/hapus"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:paddingStart="40dp"
                    android:paddingEnd="10dp"
                    app:rippleColor="@color/red"
                    android:layout_marginTop="16dp"
                    android:drawableEnd="@drawable/ic_hapus"
                    app:strokeColor="@color/red"
                    app:cornerRadius="15dp"
                    app:iconTint="@null" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
