<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.tentangaplikasi.TentangAplikasiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_about"
            android:paddingStart="30dp"
            android:paddingTop="70dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/image_profile"
                android:layout_width="280dp"
                android:layout_height="130dp"
                android:background="@drawable/bg_logo_about"
                android:text="@string/traceable_goods"
                android:scaleType="centerInside"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:drawablePadding="-20dp"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableTopCompat="@drawable/ic_tg_about" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/explain_app"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_profile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/explain_app_more"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wahyu_rahayu"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>
